# testcase_mkk

./: Agents.md  Dockerfile  LICENSE.txt  Makefile  README.md  alembic.docker.ini  alembic.ini  docker-compose.dev.yml  docker-compose.yml  local.env  pyproject.toml
.docker/: Dockerfile
.github/workflows/: ci.yml
src/dci_template/: __init__.py  __main__.py  config.py  ioc.py
src/dci_template/application/: transaction_manager.py
src/dci_template/application/commands/outbox_processor/: gateway.py  interactor.py  publisher.py
src/dci_template/entities/: constants.py  exceptions.py
src/dci_template/infrastructure/faststream/: __init__.py  publisher.py
src/dci_template/infrastructure/sa/pg/: tables.py  transaction_manager.py
src/dci_template/infrastructure/sa/pg/alembic/: env.py
src/dci_template/infrastructure/sa/pg/gateways/: healthcheck_gw.py  outbox_processor_gw.py
src/dci_template/presentation/: outbox_scheduler.py
src/dci_template/presentation/api/: health.py
src/payments/: __init__.py  __main__.py  config.py  ioc.py
src/payments/application/: transaction_manager.py
src/payments/application/commands/outbox_processor/: __init__.py  dto.py  gateway.py  interactor.py  publisher.py
src/payments/application/commands/payments/: __init__.py  dto.py  gateway.py  interactor.py
src/payments/application/commands/process_payment/: __init__.py  gateway.py  interactor.py  services.py
src/payments/application/commands/send_webhook/: __init__.py  gateway.py  interactor.py  services.py
src/payments/application/common/: payment_dto.py
src/payments/application/queries/healthcheck/: __init__.py  gateway.py  interactor.py
src/payments/application/queries/payments/: __init__.py  gateway.py  interactor.py
src/payments/entities/: constants.py  entities.py  enums.py  exceptions.py  value_objects.py
src/payments/infrastructure/: payment_gateway.py  webhook.py
src/payments/infrastructure/faststream/: publisher.py  rabbit.py
src/payments/infrastructure/sa/pg/: tables.py  transaction_manager.py
src/payments/infrastructure/sa/pg/alembic/: env.py
src/payments/infrastructure/sa/pg/alembic/versions/: 609f2b15f56c_init_migration.py
src/payments/infrastructure/sa/pg/gateways/: outbox_processor_gw.py  payments_gw.py
src/payments/presentation/: outbox_scheduler.py
src/payments/presentation/api/: __init__.py  exception_handlers.py  health.py  payments.py  schemas.py
src/payments/presentation/faststream/: __init__.py  consumer.py  rabbit.py  routes.py
tests/: conftest.py
tests/test_api/: conftest.py  test_health_api.py  test_payments_api.py
tests/test_gw/: conftest.py  test_healthcheck_gw.py  test_outbox_processor_gw.py  test_payments_gw.py  test_transactional_inbox.py
tests/test_integrations/: test_outbox_processor_interactor_db.py
tests/test_units/: test_healthcheck_interactor.py  test_payment.py  test_payment_gateway_statement.py  test_payment_interactors.py  test_transaction_manager.py
tests/test_units/test_outbox/: test_outbox_event.py  test_outbox_processor_interactor.py
