[project]
name = "payments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Mastermind-U", email = "rex49513@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.9.1",
    "fastapi>=0.135.3",
    "faststream[rabbit]>=0.6.7",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
linters = ["import-linter>=2.11", "mypy>=1.20.0", "ruff>=0.15.10"]
test = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0", "testcontainers>=4.14.2"]

[project.scripts]
payments = "payments:main"

[tool.uv]
package = true
config-settings = { editable_mode = "compat" }
concurrent-installs = 8
concurrent-downloads = 8
concurrent-builds = 8
default-groups = ["linters", "test"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
show_column_numbers = true
pretty = true
warn_unreachable = true
color_output = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py314"
line-length = 79
output-format = "grouped"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
line-ending = "lf"
skip-magic-trailing-comma = false # default: false

[tool.ruff.lint]
select = [
    "F",      # Pyflakes.
    "E",      # pycodestyle (Error), check tool.ruff.lint.pycodestyle. Must have
    "W",      # pycodestyle (Warnings), check tool.ruff.lint.pycodestyle
    "C90",    # mccabe (max_complexity), check tool.ruff.lint.mccabe
    "I",      # isort, check tool.ruff.lint.isort. Must have
    "N",      # pep8-naming
    "A",      # flake8 builtin-attribute-shadowing
    "D",      # pydocstyle, check tool.ruff.lint.pydocstyle
    "UP",     # pyupgrade, check tool.ruff.lint.pyupgrade. Must have
    "ANN",    # flake8-annotations, check tool.ruff.lint.flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "B",      # flake8-bugbear. Must have
    "COM",    # flake8-commas
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest
    "Q",      # flake8-quotes
    "SIM",    # flake8-simplify. Must have
    "TC",     # flake8-type-checking, check flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "FIX",    # flake8-fixme
    "T20",    # flake8-print
    "ERA",    # eradicate
    "RUF100", # Ruff100-specific rule TODO delete that and uncomment "RUF"-rule in line up.
    "SLF001", # flake8-self: checks for access to private/protected attributes via self
    "COM812", # this is necessary. It checks for commas in the end of the line.
]

# Gradually remove all values marked 'TODO' and fix errors.
ignore = [
    "D100",
    "D102",
    "D104",
    "D203",     # this is necessary. Conflict with `D211`
    "D213",     # this is necessary. Conflict with `D212`
    "D301",     # this is necessary.
    "UP017",
    "UP034",
    "UP035",    # this is necessary. We allowed deprecated import
    "ANN001",
    "ANN002",   # this is necessary.
    "ANN003",   # this is necessary.
    "ANN401",
    "ASYNC109",
    "ASYNC230",
    "S311",     # this is necessary.
    "B904",     # this is necessary.
    "TC001",    # this is necessary.
    "TC002",    # this is necessary.
    "TC003",    # this is necessary.
    "SIM101",   # analogue simplify-boolean-expressions IF100
    "B905",     # this is necessary. get-attr-with-constant
    "D107",     # ignore missing docstrings in __init__ methods
    "D101",     # ignore missing docstrings in public classes
    "D103",     # ignore missing docstrings in public functions
]

extend-select = []

fixable = ["ALL"]
unfixable = [
    "T20", # dont auto delete print/pprint lines in code
]


[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"] # Allow `assert` statements in test files.

[tool.ruff.lint.mccabe]
# Allow functions with complexity up to 15 before Ruff flags them as too complex.
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["payments"]
known-third-party = [
    "alembic", # Treat Alembic as a third-party dependency for import grouping.
]

split-on-trailing-comma = false
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true

[tool.importlinter]
root_package = "payments"
include_external_packages = true
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "clean arch contract"
type = "layers"
layers = ["infrastructure", "presentation", "application", "entities"]
containers = ["payments"]

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_debug = true
